<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_utils</name>
  <version>0.0.0</version>
  <description>utils for Franka robot</description>
  <maintainer email="Christian.Rauch@de.bosch.com">Christian Rauch</maintainer>
  <license>Apache-2.0</license>

  <author email="niels.vanduijkeren@de.bosch.com">Niels van Duijkeren</author>
  <author email="Christian.Rauch@de.bosch.com">Christian Rauch</author>

  <depend>libfranka</depend>
  <depend>liburdfdom-headers-dev</depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
